--- a/src/main.html
+++ b/src/main.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<title>Edward Karak: Javascript Engineering Resident Performance Task</title>
+	<style>
+		body {
+			background-image: url('bgnd.png');
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+		}
+		h1, h3, p {
+			text-align: center;
+			font-family: 'Roboto', sans-serif;
+		}
+		#output {
+			background: #fff;
+			margin: auto;
+			width: 80%;
+			border: 1px solid #000;
+			font-family: 'Consolas', 'Courier', serif;
+		}
+	</style>
+</head>
+<body>
+	<h1>JavaScript Engineering Resident Performance Task</h1>
+	<h3>Edward Karak</h3>
+	<p>The result of the JavaScript code should appear in this box:</p>
 
+	<div id="output">main.html</div>
+
+	<script type="text/javascript" src="main.js"></script> 
+</body>
+</html>
